<resources>
    <string name="app_name">SAGENDY</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SAGENDY</string>
    <string name="nav_header_subtitle">Smart Living, Seamless Control</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">States</string>
    <string name="menu_gallery">Home View</string>
    <string name="menu_slideshow">History</string>
    <string name="menu_location">Edit Location</string>
    <string name="menu_aboutus">About Us</string>
    <string name="saged">saged</string>
    <string name="signin">LOG IN</string>
    <string name="signinbutton">Log In</string>
    <string name="logout">Log Out</string>
    <string name="darkmode">Dark Mode On</string>
    <string name="firetext">Fire</string>
    <string name="gastext">Gas</string>
    <string name="safetytext">Home safety</string>
    <string name="homemodeltext">Home Model</string>
    <string name="leftrooftext">Left Roof</string>
    <string name="rightrooftext">Right Roof</string>
    <string name="livingroomtext">Living room</string>
    <string name="firstnametext">First Name</string>
    <string name="lastnametext">Last Name</string>
    <string name="agetext">Age</string>
    <string name="subdatetext">Subscribe date: 00/00/0000</string>
    <string name="englishlang">English</string>
    <string name="arabiclang">Arabic</string>
    <string name="changelang">Change Language</string>
    <string name="leftroofshow">Left roof Lamp</string>
    <string name="rightroofshow">Right roof Lamp</string>
    <string name="livingroomshow">Living room Lamp</string>
    <string name="temptext">Temp</string>
    <string name="editlocation">Edit Location</string>
    <string name="gpstracker">GPS Location</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="homelocation">Home Location</string>
    <string name="savelocation">Save Location</string>
    <string name="locationinfo">To see how to use it click here</string>
    <string name="locationuse">Take those 2 numbers and put them in the boxes</string>
    <string name="numofpeople">Number of people: </string>
    <string name="temp">Temperature: </string>
    <string name="C"> °C</string>
    <string name="youaway">You are away:</string>
    <string name="km">km</string>
    <string name="youhome">You are at home</string>
    <string name="gpson">GPS is ON</string>
    <string name="gpsoff">GPS is OFF</string>
    <string name="latitudeempty">Latitude Can\'t be Empty</string>
    <string name="longitudeempty">Longitude Can\'t be Empty</string>
    <string name="emailempty">Email Can\'t be Empty</string>
    <string name="passempty">Password Can\'t be Empty</string>
    <string name="loginsucc">Log In Successfully</string>
    <string name="loginfail">Check Email and Password and try again</string>
    <string name="selectlang">Select Language</string>
    <string name="age">Age:</string>
    <string name="subdate">Subscribe date:</string>
    <string name="darkmod">Dark Mode Enabled</string>
    <string name="lightmod">Light Mode Enabled</string>
    <string name="restartchange">Language will change to English after restarting app</string>
    <string name="locationsaved">Home location saved</string>
    <string name="humidityvalue">humidity</string>
    <string name="people">People</string>
    <string name="humidity">Humidity: </string>
    <string name="percentage"> %</string>
    <string name="door">Door</string>
    <string name="dooropen">Door is opened</string>
    <string name="doorclose">Door is closed</string>
    <string name="firealert">FIRE ALERT!</string>
    <string name="therefire">There is Fire in your home</string>
    <string name="gasalert">GAS ALERT!</string>
    <string name="theregas">There is Gas leak in your home</string>
    <string name="safealert">SAFETY ALERT!</string>
    <string name="safethere">The home is being robbed</string>
    <string name="firee">There is a Fire in the home.</string>
    <string name="fireee">Do you want to call the fire department?</string>
    <string name="gass">There is a Gas leak in the home.</string>
    <string name="gasss">Do you want to call Gas emergency?</string>
    <string name="safee">There is a Gas leak in the home.</string>
    <string name="safeee">Do you want to call Gas emergency?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="fireerror">Fire Error</string>
    <string name="gaserror">Gas Error</string>
    <string name="safeerror">Safety Error</string>
    <string name="alarmtext">Alarm</string>
    <string name="takethosenum">Take those 2 numbers and put them in the boxes</string>
    <string name="us">Crafted by Us</string>
    <string name="sagedname">Saged Rayan</string>
    <string name="gendyname">Ahmed El Gendy</string>
    <string name="abassname">Ahmed Abass</string>
    <string name="menu_rating">Rate Us</string>
    <string name="ratetext">Rate Us</string>
    <string name="welcome">Welcome to SAGENDY</string>
</resources>