<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_shield_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/baseline_history_24"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/baseline_edit_location_24"
            android:title="@string/editlocation" />
        <item
            android:id="@+id/nav_rating"
            android:icon="@drawable/baseline_star_rate_24"
            android:title="@string/rating" />
        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/baseline_info_24"
            android:title="@string/menu_aboutus" />
    </group>
</menu>